// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bfs do not ignore namedGraphs 1`] = `
Array [
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "WhiteRabbit",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Entity {
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/Rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Entity {
                    "isInternalLink": true,
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/contains",
                },
                "values": Array [
                  Entity {
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Entity {
                            "isInternalLink": true,
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Block",
                            },
                          },
                          Entity {
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://schema.org/Place",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Entity {
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/selector",
                        },
                        "values": Array [
                          Entity {
                            "isInternalLink": true,
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/postalCode",
                        },
                        "values": Array [
                          Entity {
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "4879",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/streetAddress",
                        },
                        "values": Array [
                          Entity {
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "5 Wonderland Street",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b1_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/address",
                },
                "values": Array [
                  Entity {
                    "isInternalLink": true,
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b1_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
                },
                "values": Array [
                  Entity {
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Entity {
                            "isInternalLink": true,
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Note",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Entity {
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Alice",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/contains",
                        },
                        "values": Array [
                          Entity {
                            "rows": Array [
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                                },
                                "values": Array [
                                  Entity {
                                    "isInternalLink": true,
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "http://pkm-united.org/Block",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/name",
                                },
                                "values": Array [
                                  Entity {
                                    "isInternalLink": true,
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://pkm-united.org/selector",
                                },
                                "values": Array [
                                  Entity {
                                    "isInternalLink": true,
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/image",
                                },
                                "values": Array [
                                  Entity {
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
                                    },
                                  },
                                ],
                              },
                            ],
                            "term": Object {
                              "termType": "BlankNode",
                              "value": "n3-3",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Alice.md",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-2",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/WhiteRabbit.md",
    },
  },
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "quad",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "oh-my",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "shared",
    },
  },
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "loves to drink tea with",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
    },
  },
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/Something",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/p",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/o",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/s",
    },
  },
]
`;

exports[`bfs extracts ex:Something first 1`] = `
Array [
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/Something",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/p",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/o",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/s",
    },
  },
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "WhiteRabbit",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Entity {
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/Rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/contains",
                },
                "values": Array [
                  Entity {
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Entity {
                            "isInternalLink": true,
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Block",
                            },
                          },
                          Entity {
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://schema.org/Place",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Entity {
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/selector",
                        },
                        "values": Array [
                          Entity {
                            "isInternalLink": true,
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Wozenderlands",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/postalCode",
                        },
                        "values": Array [
                          Entity {
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "4879",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/streetAddress",
                        },
                        "values": Array [
                          Entity {
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "5 Wonderland Street",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b0_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Entity {
                    "isInternalLink": true,
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/address",
                },
                "values": Array [
                  Entity {
                    "isInternalLink": true,
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b0_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
                },
                "values": Array [
                  Entity {
                    "rows": Array [
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                        },
                        "values": Array [
                          Entity {
                            "isInternalLink": true,
                            "rows": Array [],
                            "term": Object {
                              "termType": "NamedNode",
                              "value": "http://pkm-united.org/Note",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://schema.org/name",
                        },
                        "values": Array [
                          Entity {
                            "rows": Array [],
                            "term": Object {
                              "datatype": Object {
                                "termType": "NamedNode",
                                "value": "http://www.w3.org/2001/XMLSchema#string",
                              },
                              "language": "",
                              "termType": "Literal",
                              "value": "Alice",
                            },
                          },
                        ],
                      },
                      Object {
                        "predicate": Object {
                          "termType": "NamedNode",
                          "value": "http://pkm-united.org/contains",
                        },
                        "values": Array [
                          Entity {
                            "rows": Array [
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                                },
                                "values": Array [
                                  Entity {
                                    "isInternalLink": true,
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "http://pkm-united.org/Block",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/name",
                                },
                                "values": Array [
                                  Entity {
                                    "isInternalLink": true,
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://pkm-united.org/selector",
                                },
                                "values": Array [
                                  Entity {
                                    "isInternalLink": true,
                                    "rows": Array [],
                                    "term": Object {
                                      "datatype": Object {
                                        "termType": "NamedNode",
                                        "value": "http://www.w3.org/2001/XMLSchema#string",
                                      },
                                      "language": "",
                                      "termType": "Literal",
                                      "value": "Alice",
                                    },
                                  },
                                ],
                              },
                              Object {
                                "predicate": Object {
                                  "termType": "NamedNode",
                                  "value": "http://schema.org/image",
                                },
                                "values": Array [
                                  Entity {
                                    "rows": Array [],
                                    "term": Object {
                                      "termType": "NamedNode",
                                      "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
                                    },
                                  },
                                ],
                              },
                            ],
                            "term": Object {
                              "termType": "BlankNode",
                              "value": "n3-1",
                            },
                          },
                        ],
                      },
                    ],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Alice.md",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-0",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/WhiteRabbit.md",
    },
  },
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "loves to drink tea with",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
    },
  },
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "quad",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "oh-my",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "shared",
    },
  },
]
`;

exports[`bfs maxDepth = 2 1`] = `
Array [
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "WhiteRabbit",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Entity {
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/Rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/contains",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b2_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "White rabbit",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/720/1*HZazTjGg9EBSOoz34IN-tA.jpeg",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/address",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "BlankNode",
                      "value": "b2_b4",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://example.org/note/Alice.md",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-4",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/WhiteRabbit.md",
    },
  },
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Block",
            },
          },
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://schema.org/Place",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Wozenderlands",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/selector",
        },
        "values": Array [
          Entity {
            "isInternalLink": true,
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Wozenderlands",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/postalCode",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "4879",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/streetAddress",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "5 Wonderland Street",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "BlankNode",
      "value": "b2_b4",
    },
  },
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "loves to drink tea with",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/property/loves%20to%20drink%20tea%20with",
    },
  },
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Entity {
            "isInternalLink": true,
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://pkm-united.org/Note",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://schema.org/name",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "datatype": Object {
                "termType": "NamedNode",
                "value": "http://www.w3.org/2001/XMLSchema#string",
              },
              "language": "",
              "termType": "Literal",
              "value": "Alice",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://pkm-united.org/contains",
        },
        "values": Array [
          Entity {
            "rows": Array [
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "http://pkm-united.org/Block",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/name",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Alice",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://pkm-united.org/selector",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "datatype": Object {
                        "termType": "NamedNode",
                        "value": "http://www.w3.org/2001/XMLSchema#string",
                      },
                      "language": "",
                      "termType": "Literal",
                      "value": "Alice",
                    },
                  },
                ],
              },
              Object {
                "predicate": Object {
                  "termType": "NamedNode",
                  "value": "http://schema.org/image",
                },
                "values": Array [
                  Entity {
                    "rows": Array [],
                    "term": Object {
                      "termType": "NamedNode",
                      "value": "https://miro.medium.com/max/1100/1*xupcHn3b0jEFPkjvuH5Pbw.jpeg",
                    },
                  },
                ],
              },
            ],
            "term": Object {
              "termType": "BlankNode",
              "value": "n3-5",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/note/Alice.md",
    },
  },
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "quad",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "oh-my",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "shared",
    },
  },
  Entity {
    "rows": Array [
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/Something",
            },
          },
        ],
      },
      Object {
        "predicate": Object {
          "termType": "NamedNode",
          "value": "http://example.org/p",
        },
        "values": Array [
          Entity {
            "rows": Array [],
            "term": Object {
              "termType": "NamedNode",
              "value": "http://example.org/o",
            },
          },
        ],
      },
    ],
    "term": Object {
      "termType": "NamedNode",
      "value": "http://example.org/s",
    },
  },
]
`;
